Issue #1523: Remove deprecated overflow masking in struct module, and make sure that out-of-range values consistently raise struct.error.